# The-Jinn-Guard

./: .dockerignore  .gitattributes  .gitignore  ACTION_MANIFEST.md  BENCHMARKS-01.md  BENCHMARKS-02.md  BENCHMARKS-03.md  BENCHMARKS-04.md  BENCHMARKS-05.md  BENCHMARKS-6-12-26.md  BREAK_IT_CHALLENGE.md  CHANGELOG.md  COVER_NOTE.md  Cargo.toml  DEMO.md  DEPUTY_GOVERNANCE.md  Dockerfile  Dockerfile.agent  Dockerfile.validate  LAUNCH_CHECKLIST.md  LICENSE  Makefile  OPERATOR_RUNBOOK.md  OWASP-MAPPING.md  PROFESSOR_VALIDATION.md  README.md  RED_TEAM_FINDINGS.md  RELEASE_INTEGRITY.md  RESIDUAL_RISKS.md  ROADMAP.md  SECURITY.md  SECURITY_ARCHITECTURE.md  THREAT_MODEL.md  compiled_output.rs  deny.toml  docker-compose.runtime.yml  docker-compose.yml  implementation_walkthrough.md  jinnguard_policy.json  libcompiled_output.rlib  (+12 more)
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
.well-known/: security.txt
SECURITY/: ADVISORIES.md
bpf/: Makefile  jg_cap_capable.bpf.c  jg_events.h  jg_execve.bpf.c  jg_openat.bpf.c  vmlinux.h
bpf/common/: governed_floor.h  maps.h
bpf/lsm/: jg_bprm_check_security.c  jg_capable.c  jg_common.h  jg_file_open.c  jg_inode_create.c  jg_inode_unlink.c  jg_move_mount.c  jg_sb_mount.c  jg_sb_pivotroot.c  jg_socket_connect.c  jg_socket_sendmsg.c
bpf/probe/connect_min/: cli.c  loader.c  mini.bpf.c  mini_socktype.bpf.c  run.sh
deploy/: arm-lsm-ostree.sh  bootstrap.sh  install.sh  jinnguard.service
docs/: agent_governance_extensions.md  ci-self-hosted-runners.md  convergence_architecture.md  runtime_sandbox.md  rust_sandbox.md  step2_mandatory_mediation_sandbox.md
docs/calibration-review-2026-06/: C2PA_READINESS_GAP_MAP.md  CLAIM_EVIDENCE_MATRIX.md  EXECUTIVE_MEMO.md  GOVERNANCE_MATURITY_SCORECARD.md  README.md  TECHNICAL_APPENDIX.md  VALIDATION_STATUS.md
examples/: step1_capability_broker_demo.py  step2_mandatory_mediation_demo.py  step2_runtime_sandbox_probe.py
examples/legacy/: current_intent.ts  jinn_browser_sentinel.sh  session_ledger.json
examples/legacy/stubs/ts_compiler/src/: lib.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: envelope.rs  frame_header.rs  wire_packet.rs
jinnguard_py/jinnguard/: __init__.py  client.py  sandbox.py
jinnguard_py/tests/: test_client.py
lab/: README.md  WORKSHEET.md  actions.json  checker_solution.py  checker_starter.py  policy.json
sandbox/: agent-seccomp.json
scripts/: demo.sh  docker_sandbox.sh  make_review_package.sh  rebuild_and_compare_release.sh  run_professor_validation.sh  runtime_agent_demo.sh  runtime_agent_probe.sh  runtime_agent_shell.sh  runtime_daemon.sh  runtime_down.sh  runtime_logs.sh  runtime_smoke.sh  sandbox_bootstrap.sh  sandbox_build.sh  sandbox_demo_step1.sh  sandbox_run_daemon.sh  sandbox_smoke.sh  sandbox_test.sh  validate_m2_path_resolution.sh  validate_m5_mandatory_mediation.sh
scripts/demo/: jinn_guard_demo.py
scripts/validate/: .gitignore  CLAIMS.md  README.md  _daemon.py  byo_attack.py  kernel_floor_demo.sh  test_arm_lsm_ostree.py  test_verify_audit_chain_boot_marker.py  test_verify_audit_chain_tail_truncation.py  validate.py  verify_audit_chain.py
ts_checker/: Cargo.toml
ts_checker/src/: lib.rs
ts_cli/: Cargo.toml
ts_cli/benches/: socket_throughput.rs  stress_bench.rs  throughput.rs
ts_cli/src/: ebpf_monitor.rs  explainability.rs  fleet_policy.rs  governance.rs  main.rs  mcp_gateway.rs  metrics.rs  provenance_manifest.rs  system_immunity.rs
ts_cli/tests/: integration.rs  kernel_lsm.rs  swarm_attack.rs
ts_compiler/: Cargo.toml
ts_parser/: Cargo.toml
ts_parser/src/: lib.rs
ts_wire/: Cargo.toml
ts_wire/src/: lib.rs
