[package]
name = "ts_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
ts_parser = { path = "../ts_parser" }
ts_checker = { path = "../ts_checker" }
ts_compiler = { path = "../ts_compiler" }
z3 = { workspace = true }
anyhow = { workspace = true }
serde_json = "1.0.150"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "net", "macros", "io-util"] }
signal-hook = "0.4.4"
hmac = "0.13.0"
sha2 = "0.11.0"
hex = "0.4.3"
constant_time_eq = "0.5.0"
libc = "0.2.186"

[features]
default = []
kernel_telemetry = []
