[package]
name = "ts_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
nom = "7.1.3"
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
constant_time_eq = "0.5.0"
libc = "0.2.186"

# Cryptographic and Verification Dependencies
z3 = "0.12.1"
signal-hook = "0.4.4"
hmac = "0.13.0"
sha2 = "0.11.0"
hex = "0.4.3"

# Local Workspace Modules
ts_parser = { path = "../ts_parser" }
ts_compiler = { path = "../ts_compiler" }
ts_checker = { path = "../ts_checker" }

[features]
default = []
kernel_telemetry = []
