[package]
name = "ts_cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
log = "0.4"
anyhow = "1.0.102"
nom = "7.1.3"
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9"
constant_time_eq = "0.5.0"
libc = "0.2.186"
clap = { version = "4", features = ["derive", "env"] }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
bytes = "1"

# Cryptographic and Verification Dependencies
z3 = "0.12.1"
signal-hook = "0.4.4"
hmac = "0.13.0"
sha2 = "0.11.0"
hex = "0.4.3"

# Local Workspace Modules
ts_checker = { path = "../ts_checker" }
ts_wire = { path = "../ts_wire" }

# eBPF backend (optional, only compiled with `--features kernel_telemetry`)
aya = { version = "0.13", optional = true }

[features]
default = []
kernel_telemetry = ["aya"]
# Signed fleet-policy client (pull + HMAC-verify + hot-reload a central bundle).
# Off by default: the open-core build is single-node. The control-plane *server*
# is not in this repo; this flag only compiles the client integration hook.
fleet = []
# Umbrella for the commercial build — turns on every enterprise integration.
enterprise = ["kernel_telemetry", "fleet"]

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "socket_throughput"
harness = false

[[bench]]
name = "stress_bench"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
hmac = "0.13.0"
sha2 = "0.11.0"
hex = "0.4.3"
serde_json = "1.0"
num_cpus = "1.16"

[[test]]
name = "integration"
path = "tests/integration.rs"

[[test]]
name = "swarm_attack"
path = "tests/swarm_attack.rs"

[[test]]
name = "kernel_lsm"
path = "tests/kernel_lsm.rs"
