[package]
name = "ts_wire"
version = "0.1.0"
edition = "2021"
description = "Pure, panic-free decoders for the Jinn Guard wire protocol (frame + signed envelope) — the externally reachable attack surface, isolated so it can be fuzzed."

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
hmac = "0.13.0"
sha2 = "0.11.0"
hex = "0.4.3"
constant_time_eq = "0.5.0"
